// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-textarea"
  >
    <textarea
      class="t-textarea__inner"
      placeholder="请输入内容"
    />
  </div>
</DocumentFragment>
`;

exports[`events.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-textarea"
  >
    <textarea
      class="t-textarea__inner"
      placeholder="请输入内容"
    />
  </div>
</DocumentFragment>
`;

exports[`maxlength.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-textarea"
  >
    <textarea
      class="t-textarea__inner t-resize-none"
      maxlength="20"
      placeholder="请输入内容"
    />
    <span
      class="t-textarea__limit"
    >
      0/20
    </span>
  </div>
</DocumentFragment>
`;

exports[`type.jsx 1`] = `
<DocumentFragment>
  <div
    class="tdesign-demo-block-column"
  >
    <div
      class="t-textarea"
    >
      <textarea
        class="t-textarea__inner"
        placeholder="请输入内容"
        readonly=""
      >
        只读状态
      </textarea>
    </div>
    <div
      class="t-textarea"
    >
      <textarea
        class="t-textarea__inner t-is-disabled"
        disabled=""
        placeholder="请输入内容"
      >
        禁用状态
      </textarea>
    </div>
  </div>
</DocumentFragment>
`;
